--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
-<html>
+<html lang="en">
     <head>
         <title>Francesca codes</title>
 
+        <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <link rel="stylesheet" href="css/normalize.css">
@@ -35,7 +36,7 @@
       <main>
         <section id="portfolio">
           <div class="full-width">
-            <h1>My portfolio</h1>
+            <h2>My portfolio</h2>
             <div class="third-width">
                 <img class="work" src="img/rogue-pickings-thumbnail.png" alt="Rogue Pickings" />
                 <h3>Rogue Pickings</h3>
@@ -58,7 +59,7 @@
 
         <section id="about">
           <div class="full-width">
-            <h1>About me</h1>
+            <h2>About me</h2>
             <div class="half-width">
               <p>I’m Francesca Corona, a recent graduate in Communication Sciences and current Skillcrush student.<br>
                 I'm based in Sardinia, Italy, but I'm getting ready to move to Kobe, Japan, in January 2020.</p>
