--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Francesca codes</title>
+        <title>Francesca Corona, web developer</title>
 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,7 +28,8 @@
           </nav>
             </div>
 
-            <h2>< Ciao! I code /></h2>
+            <h2>< Ciao! I'm Francesca</h2>
+            <h2>and I code /></h2>
 
         </div>
       </header>
