new pages and new style

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           <div class="half-width">
           <nav>
             <ul>
+              <li><a href="index.html">Home</a></li>
               <li><a href="#portfolio">Portfolio</a></li>
               <li><a href="#about">About</a></li>
               <li><a href="#contact">Contact</a></li>
@@ -28,8 +29,8 @@
           </nav>
             </div>
 
-            <h2>< Ciao! I'm Francesca</h2>
-            <h2>and I code /></h2>
+            <h2>Ciao! I'm Francesca</h2>
+            <h2>I'm a <span>front-end developer</span></h2>
 
         </div>
       </header>
@@ -55,6 +56,7 @@
                 <h3>Holstee Manifesto</h3>
                 <h4>HTML5 & CSS exercise</h4>
               </div>
+              <h5><a href="portfolio/index.html">See more!</a></h5>
           </div>
         </section>
 
@@ -62,12 +64,12 @@
           <div class="full-width">
             <h2>About me</h2>
             <div class="half-width">
-              <p>I’m Francesca Corona, a recent graduate in Communication Sciences and current Skillcrush student.<br>
+              <p>I’m Francesca, a recent graduate in Communication Sciences and currently working on improving my coding skills as a Skillcrush student.<br>
                 I'm based in Sardinia, Italy, but I'm getting ready to move to Kobe, Japan, in January 2020.</p>
+              <h5><a href="about-me/index.html">Read more!</a></h5>
             </div>
             <div class="half-width">
-              <p>I can build single- or multi-page websites using a design comp using HTML and CSS.<br>
-                I have some UX design knowledge (university) and moderate Photoshop skills (self-taught).</p>
+              <img src="img/pc.jpg" alt="Computer" />
             </div>
           </div>
         </section>
@@ -76,12 +78,12 @@
       <footer id="contact">
         <div class="full-width">
           <div class="third-width">
-            <h3>Contact me</h3>
+            <h3>Hire me</h3>
             <a href="mailto:coronafrancesca808@gmail.com">coronafrancesca808@gmail.com</a>
           </div>
 
           <div class="third-width">
-            <h3>Follow me</h3>
+            <h3>Let's connect!</h3>
             <a href="https://github.com/frac8"><img class="icon" src="img/GitHub.png" alt="GitHub" /></a>
           </div>
 
